@@ -1,3 +1,8 @@
+22 July 2009: Wouter
+	- Fix bug found by Michael Tokarev where unbound would try to
+	  prime the root servers even though forwarders are configured for
+	  the root.
+
 21 July 2009: Wouter
 	- Fix server selection, so that it waits for open target queries when
 	  faced with lameness.
